--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,12 @@
         completions."
     </string>
     <string name="textview_historic">History of exchanges</string>
+    <string name="name_lbl">Name</string>
+    <string name="phone_lbl">Phone</string>
+    <string name="email_lbl">Email</string>
+    <string name="login_lbl">Login</string>
+    <string name="password_lbl">Password</string>
+    <string name="image_lbl">Image</string>
+    <string name="create_lbl">Create</string>
 
-<!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
